# bandit_dspy

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  mypy.ini  pyproject.toml  temp_code.py
.github/workflows/: ci.yml
.hypothesis/constants/: 4d85efccf251fcbe  698fd758b748d542  6b8333180f96ac5e  90a63733174ae547
src/bandit_dspy/: __init__.py  core.py  gepa_optimizer.py  metric.py  teleprompter.py
src/bandit_dspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_advanced_coverage.py  test_core.py  test_gepa_optimizer.py  test_metric.py  test_performance.py  test_property_based.py  test_teleprompter.py  test_teleprompter_optimization.py
